--- a/html/contacts.html
+++ b/html/contacts.html
@@ -7,16 +7,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="../style/style.css">
-    
     <script src="../js/main.js" defer></script>
 </head>
 <body>
 
     <div class="wrapper">
 
-        <header class="header header-main">
+        <header class="header">
             <div class="container">
                 <div class="header_inner">
                     <a href="#" class="logo">
@@ -46,22 +44,8 @@
         </header>
 
         <main class="main">
-            <section class="top">
-                <div class="container">
-                    <h1 class="title">Leasing From D&M</h1>
-                    <a href="#" class="top_link">FIND A CAR</a>
-                </div>
-            </section>
-            <div class="slider">
-                <div class="swiper">
-                    <div class="swiper-wrapper">
-                        <div class="swiper-slide" style="background-image: url(../img/slide-1.jpeg);"></div>
-                        <div class="swiper-slide" style="background-image: url(../img/slide-1.jpeg);"></div>
-                        <div class="swiper-slide" style="background-image: url(../img/slide-1.jpeg);"></div>
-                        <div class="swiper-slide" style="background-image: url(../img/slide-1.jpeg);"></div>
-                    </div>
-                    <div class="swiper-pagination"></div>
-                </div>
+            <div class="container">
+                
             </div>
         </main>
 
@@ -164,6 +148,6 @@
         </footer>
 
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
 </body>
 </html>
