--- a/html/index.html
+++ b/html/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="zxx">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="../style/style.css">
-    
     <script src="../js/main.js" defer></script>
 </head>
 <body>
@@ -46,23 +46,122 @@
         </header>
 
         <main class="main">
+
             <section class="top">
                 <div class="container">
                     <h1 class="title">Leasing From D&M</h1>
                     <a href="#" class="top_link">FIND A CAR</a>
                 </div>
             </section>
+
             <div class="slider">
                 <div class="swiper">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide" style="background-image: url(../img/slide-1.jpeg);"></div>
+                        <div class="swiper-slide" style="background-image: url(../img/slide-2.jpeg);"></div>
                         <div class="swiper-slide" style="background-image: url(../img/slide-1.jpeg);"></div>
-                        <div class="swiper-slide" style="background-image: url(../img/slide-1.jpeg);"></div>
-                        <div class="swiper-slide" style="background-image: url(../img/slide-1.jpeg);"></div>
+                        <div class="swiper-slide" style="background-image: url(../img/slide-2.jpeg);"></div>
                     </div>
                     <div class="swiper-pagination"></div>
                 </div>
             </div>
+
+            <section class="why_list">
+                <div class="container">
+                    <h2 class="section_title">Why Lease with D&M?</h2>
+                    <ul class="why_list-list">
+                        <li class="why_list-item">
+                            <img src="../img/Top-Dealers.svg" alt="Top Dealers" class="why_list-img">
+                            <h3 class="why_list-title">Top Dealers</h3>
+                            <p class="why_list-text">TrueCar Certified Dealers compete for your business by providing
+                                discounted pricing on in-stock inventory.</p>
+                        </li>
+                        <li class="why_list-item">
+                            <img src="../img/Discounted-Pricing.svg" alt="Discounted Pricing" class="why_list-img">
+                            <h3 class="why_list-title">Discounted Pricing</h3>
+                            <p class="why_list-text">View local inventory from the comfort of home and get access to
+                                guaranteed savings on the car of your choice.</p>
+                        </li>
+                        <li class="why_list-item">
+                            <img src="../img/Lower-Payments.svg" alt="Lower Payments" class="why_list-img">
+                            <h3 class="why_list-title">Lower Payments</h3>
+                            <p class="why_list-text">Get discounted pricing when you shop for a car or truck using
+                                TrueCar and save on your lease payment.</p>
+                        </li>
+                        <li class="why_list-item">
+                            <img src="../img/Easy-upgade.svg" alt="Easy Upgrade" class="why_list-img">
+                            <h3 class="why_list-title">Easy Upgrade</h3>
+                            <p class="why_list-text">Easy to upgrade to the newest vehicle model every few years if you
+                                would like to be modern and comfortable</p>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+
+            <section class="how_list">
+                <div class="container">
+                    <div class="how_list-inner">
+                        <h2 class="section_title">How Does Leasing Work?</h2>
+                        <p class="how_list-text">Leasing a vehicle is essentially entering into a long term rental agreement for that vehicle. Unlike a traditional car purchase, you don’t actually own the vehicle. Instead, a leasing company purchases the vehicle from the dealer on your behalf and then you make monthly payments to the leasing company for the duration of your lease. Some leases however, do provide the option to purchase the vehicle at the end of the lease.</p>
+                <h4 class="section_title-mini">Similar to a short term car rental, there are rules that define:</h4>
+                <ol class="how_list-list">
+                    <li class="how_list-item">
+                        How much you can drive, stated as annual miles (excess miles are charged at a specified rate)
+                    </li>
+                    <li class="how_list-item">
+                        Types of damage that you may be liable for at the end of your lease
+                    </li>
+                    <li class="how_list-item">
+                    The procedures and costs when you return the vehicle at the end of your lease
+                    </li>
+                </ol>
+
+                        <p class="how_list-text">Lease contracts are a commitment and ending them early can be difficult and expensive so it is important to consider your circumstances carefully before you decide.</p>
+                    </div>
+                </div>
+            </section>
+
+            <section class="video">
+                <div class="container">
+                    <h2 class="section_title video_title">
+                        WELCOME TO D&M LEASING
+                    </h2>
+                    <p class="video_text">
+                        Find out how easy it is to lease from D&M
+                    </p>
+                    <iframe class="video_content" width="1000" height="500" src="https://www.youtube.com/embed/nDKEGU9VvB8?si=eIT1u57M4Q3yKl0b&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+            </section>
+
+            <section class="important">
+                <div class="container">
+                        <h2 class="section_title important_title">
+                            Important Things to Consider
+                        </h2>
+                        <p class="important-text">
+                            Depending on your circumstances and what is important to you, a lease could be a great option for your next vehicle. Below are some important factors that may influence your decision.
+                        </p>
+                        <ul class="important_list">
+                            <li class="important_list-item">
+                                <img src="../img/important-1.jpeg" alt="car" class="important_list-img">
+                                <p class="important_list-text">Monthly payments on leases are generally 20% - 30% cheaper than loans</p>
+                            </li>
+                            <li class="important_list-item">
+                                <img src="../img/important-2.jpeg" alt="car" class="important_list-img">
+                                <p class="important_list-text">You may be eligible for a tax break if you use the leased vehicle for business purposes</p>
+                            </li>
+                            <li class="important_list-item">
+                                <img src="../img/important-3.jpeg" alt="car" class="important_list-img">
+                                <p class="important_list-text">Easy to upgrade to the newest vehicle model every few years</p>
+                            </li>
+                            <li class="important_list-item">
+                                <img src="../img/important-4.jpeg" alt="chevrolet-logo" class="important_list-img">
+                                <p class="important_list-text">There are often fees charged if you drive more than your lease's mileage allowance</p>
+                            </li>
+                        </ul>
+                </div>
+            </section>
+            
         </main>
 
         <footer class="footer">
@@ -162,7 +261,7 @@
                 </nav>
             </div>
         </footer>
-
+5
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 </body>
