--- a/html/index.html
+++ b/html/index.html
@@ -37,7 +37,7 @@
                                 <a href="#" class="menu_list-link">LEASE VS BUY</a>
                             </li>
                             <li class="menu_list-item">
-                                <a href="#" class="menu_list-link">CONTACT US</a>
+                                <a href="../html/contacts.html" class="menu_list-link">CONTACT US</a>
                             </li>
                         </ul>
                     </nav>
