--- a/html/new-cars.html
+++ b/html/new-cars.html
@@ -23,7 +23,7 @@
                     <nav class="menu">
                         <ul class="menu_list">
                             <li class="menu_list-item">
-                                <a href="#" class="menu_list-link">NEW CARS</a>
+                                <a href="#" class="menu_list-link menu_list-link--active">NEW CARS</a>
                             </li>
                             <li class="menu_list-item">
                                 <a href="#" class="menu_list-link">PRE-OWNED CARS</a>
@@ -44,9 +44,80 @@
         </header>
 
         <main class="main">
+         <section class="catalog">
             <div class="container">
-                
+            <h2 class="section_title">Choose your car</h2>
+            <div class="tabs">
+            <div class="tabs_btn">
+                <button class="tabs_btn-item tabs_btn-item--active">Car and Minivan</button>
+                <button class="tabs_btn-item">Trucks</button>
+                <button class="tabs_btn-item">Crossovers & SUVs</button>
+                <button class="tabs_btn-item">Electrified</button>
             </div>
+            <div class="tabs_content">
+                <div class="tabs_content-item">
+                    <div class="car_card">
+                        <img src="../img/card-1.jpeg" alt="car-card" class="card_img">
+                        <h4 class="card_title">Toyota Crown 2023</h4>
+                        <p class="card_text">starting from $ 39900</p>
+                        <p class="card_price">$ 650/mo</p>
+                        <a href="#" class="card_link">see details</a>
+                    </div>
+                </div>
+                <div class="tabs_content-item">
+                    <div class="car_card">
+                        <img src="../img/card-2.jpeg" alt="car-card" class="card_img">
+                        <h4 class="card_title">Prius Prime 2023</h4>
+                        <p class="card_text">starting from $ 39900</p>
+                        <p class="card_price"> $ 450/mo</p>
+                        <a href="#" class="card_link">see details</a>
+                    </div>
+                </div>
+                <div class="tabs_content-item">
+                    <div class="car_card">
+                        <img src="../img/card-3.jpeg" alt="car-card" class="card_img">
+                        <h4 class="card_title">Toyota Prius 2023</h4>
+                        <p class="card_text">starting from $ 39900</p>
+                        <p class="card_price"> $510/mo</p>
+                        <a href="#" class="card_link">see details</a>
+                    </div>
+                </div>
+                <div class="tabs_content-item">
+                    <div class="car_card">
+                        <img src="../img/card-4.jpeg" alt="car-card" class="card_img">
+                        <h4 class="card_title">Hyundai Kona 2023</h4>
+                        <p class="card_text">starting from $ 39900</p>
+                        <p class="card_price">$ 410/mo</p>
+                        <a href="#" class="card_link">see details</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+                <a href="#" class="showmore_link">SHOW MORE</a>
+            </div>
+         </section>
+
+            <section class="topics">
+                <div class="container">
+                    <div class="topics_items">
+                        <div  class="topics_item">
+                            <img src="../img/topicks-1.jpeg" alt="topic" class="topics_item-img">
+                            <p class="topics_item-text">An easier way to buy your next Toyota</p>
+                            <a href="#" class="topics_item-link">more</a>
+                        </div>
+                            <div  class="topics_item">
+                            <img src="../img/topics-2.jpeg" alt="topic" class="topics_item-img">
+                            <p class="topics_item-text">A Guide to Road-Tripping With Pets</p>
+                            <a href="#" class="topics_item-link">more</a>
+                        </div>
+                    </div>
+                <a href="#" class="showmore_link">SHOW MORE</a>
+                </div>
+            </section>
+
         </main>
 
         <footer class="footer">
