--- a/html/new-cars.html
+++ b/html/new-cars.html
@@ -44,61 +44,60 @@
         </header>
 
         <main class="main">
-         <section class="catalog">
-            <div class="container">
-            <h2 class="section_title">Choose your car</h2>
-            <div class="tabs">
-            <div class="tabs_btn">
-                <button class="tabs_btn-item tabs_btn-item--active">Car and Minivan</button>
-                <button class="tabs_btn-item">Trucks</button>
-                <button class="tabs_btn-item">Crossovers & SUVs</button>
-                <button class="tabs_btn-item">Electrified</button>
-            </div>
-            <div class="tabs_content">
-                <div class="tabs_content-item">
-                    <div class="car_card">
-                        <img src="../img/card-1.jpeg" alt="car-card" class="card_img">
-                        <h4 class="card_title">Toyota Crown 2023</h4>
-                        <p class="card_text">starting from $ 39900</p>
-                        <p class="card_price">$ 650/mo</p>
-                        <a href="#" class="card_link">see details</a>
+            <section class="catalog">
+                <div class="container">
+                  <h2 class="section_title">Choose your car</h2>
+                  <div class="tabs">
+                    <div class="tabs_btn">
+                      <button class="tabs_btn-item tabs_btn-item--active">Car and Minivan</button>
+                      <button class="tabs_btn-item">Trucks</button>
+                      <button class="tabs_btn-item">Crossovers & SUVs</button>
+                      <button class="tabs_btn-item">Electrified</button>
                     </div>
-                </div>
-                <div class="tabs_content-item">
-                    <div class="car_card">
-                        <img src="../img/card-2.jpeg" alt="car-card" class="card_img">
-                        <h4 class="card_title">Prius Prime 2023</h4>
-                        <p class="card_text">starting from $ 39900</p>
-                        <p class="card_price"> $ 450/mo</p>
-                        <a href="#" class="card_link">see details</a>
+                    <div class="tabs_content">
+                      <div class="tabs_content-item">
+                        <div class="car_card">
+                          <img src="../img/card-1.jpeg" alt="car-card" class="card_img">
+                          <div class="card-content">
+                            <h4 class="card_title">Toyota Crown 2023</h4>
+                            <p class="card_text">starting from $39,900</p>
+                            <p class="card_price">$650/mo</p>
+                          </div>
+                          <a href="#" class="card_link">see details</a>
+                        </div>
+                        <div class="car_card">
+                          <img src="../img/card-2.jpeg" alt="car-card" class="card_img">
+                          <div class="card-content">
+                            <h4 class="card_title">Prius Prime 2023</h4>
+                            <p class="card_text">starting from $39,900</p>
+                            <p class="card_price">$450/mo</p>
+                          </div>
+                          <a href="#" class="card_link">see details</a>
+                        </div>
+                        <div class="car_card">
+                          <img src="../img/card-3.jpeg" alt="car-card" class="card_img">
+                          <div class="card-content">
+                            <h4 class="card_title">Toyota Prius 2023</h4>
+                            <p class="card_text">starting from $39,900</p>
+                            <p class="card_price">$510/mo</p>
+                          </div>
+                          <a href="#" class="card_link">see details</a>
+                        </div>
+                        <div class="car_card">
+                          <img src="../img/card-4.jpeg" alt="car-card" class="card_img">
+                          <div class="card-content">
+                            <h4 class="card_title">Hyundai Kona 2023</h4>
+                            <p class="card_text">starting from $39,900</p>
+                            <p class="card_price">$410/mo</p>
+                          </div>
+                          <a href="#" class="card_link">see details</a>
+                        </div>
+                      </div>
                     </div>
+                  </div>
+                  <a href="#" class="showmore_link">SHOW MORE</a>
                 </div>
-                <div class="tabs_content-item">
-                    <div class="car_card">
-                        <img src="../img/card-3.jpeg" alt="car-card" class="card_img">
-                        <h4 class="card_title">Toyota Prius 2023</h4>
-                        <p class="card_text">starting from $ 39900</p>
-                        <p class="card_price"> $510/mo</p>
-                        <a href="#" class="card_link">see details</a>
-                    </div>
-                </div>
-                <div class="tabs_content-item">
-                    <div class="car_card">
-                        <img src="../img/card-4.jpeg" alt="car-card" class="card_img">
-                        <h4 class="card_title">Hyundai Kona 2023</h4>
-                        <p class="card_text">starting from $ 39900</p>
-                        <p class="card_price">$ 410/mo</p>
-                        <a href="#" class="card_link">see details</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-
-                <a href="#" class="showmore_link">SHOW MORE</a>
-            </div>
-         </section>
+              </section>
 
             <section class="topics">
                 <div class="container">
